# text-analysis-labs

./: README.md  pyproject.toml  requirements.txt
lab 1 (regex)/: lab-1-notebook.ipynb
lab 1 (regex)/data/: text2.txt
lab 2 (nltk)/: lab-2-notebook.ipynb
lab 2 (nltk)/data/: text3.txt
lab 3 (text data models)/: lab-3-notebook.ipynb
lab 3 (text data models)/data/: doc8.txt
lab 4 (text data classification)/: lab-4-notebook.ipynb
lab 5 (topic modeling)/: lab-5-notebook.ipynb
lab 6 (sentiment analysis)/: lab-6-notebook.ipynb
lab 6 (sentiment analysis)/data/: lab6-2.txt
lab 7 (training spaCy models)/: lab-7-notebook.ipynb
lab 8 (syntactic dependencies in spaCy)/: lab-8-notebook.ipynb
