[tool.poetry]
name = "text-analysis-labs"
version = "0.1.0"
description = "<3"
authors = ["Nikita Petrykin <nvnedu2120@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.2"
notebook = "^7.0.8"
nltk = "^3.8.1"
pandas = "^2.2.0"
scikit-learn = "^1.4.1.post1"
numpy = "^1.26.4"
seaborn = "^0.13.2"
scipy = "1.12.0"
matplotlib = "^3.8.3"
gensim = "^4.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
